# Real-time-financial-data-pipeline

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/app/: api.py  config.py  db.py  ingestor.py  main.py  models.py  schemas.py  utils.py
src/dashboard/: Dashboard.py
tests/: test_health.py
